Include scenario state JSON files in version control
- Updated .gitignore to include scenario_state.json files
- Added agent/scenario_state.json - scenario tracking and state management
- Added injects/scenario_state.json - inject execution state

These files contain important configuration data that should be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -66,9 +66,7 @@ pids/
 tmp/
 temp/
 
-# Scenario state files (these contain runtime state)
-scenario_state.json
-*/scenario_state.json
+# Note: scenario_state.json files are now included as they contain important configuration data
 
 # Backup files
 *.backup
